syntax = "proto3";

package v2ray.core.transport.internet.tlsmirror.tlstrafficgen;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Tlsmirror.Tlstrafficgen";
option go_package = "github.com/v2fly/v2ray-core/v5/transport/internet/tlsmirror/tlstrafficgen";
option java_package = "com.v2ray.core.transport.internet.tlsmirror.tlstrafficgen";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message TimeSpec {
  uint64 base_nanoseconds = 1;
  uint64 uniform_random_multiplier_nanoseconds = 2;
}

message Header {
  string name = 1;
  string value = 2;
  repeated string values = 3;
}

message TransferCandidate{
  int32 weight = 1;
  int64 goto_location = 2;
}

message Step {
  string name = 1;
  string host = 8;
  string path = 2;
  string method = 3;
  repeated TransferCandidate next_step = 6;
  bool connection_ready = 7;
  repeated Header headers = 9;
  bool connection_recall_exit = 10;
  TimeSpec wait_time = 11;
  bool h2_do_not_wait_for_download_finish = 12;
}

message Config {
  repeated Step steps = 1;
  google.protobuf.Any security_settings = 2;
}